--- a/app/views/medals/edit.html.erb
+++ b/app/views/medals/edit.html.erb
@@ -1,4 +1,5 @@
-
-<div class="ui green segment">
-  <%= render 'form' %>
+<div class="ui sixteen wide mobile twelve wide tablet eight wide computer column">
+  <div class="ui green segment">
+    <%= render 'form' %>
+  </div>
 </div>
