--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,1 +1,3 @@
-<%= render 'form' %>
+<div class="ui sixteen wide mobile twelve wide tablet eight wide computer column ">
+  <%= render 'form' %>
+</div>
