--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,3 +1,5 @@
-<div class="ui green segment">
-  <%= render 'form' %>
+<div class="ui sixteen wide mobile twelve wide tablet twelve wide computer column ">
+  <div class="ui green segment">
+    <%= render 'form' %>
+  </div>
 </div>
