--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
 
     </div>
     <div class="image">
-      <%= image_tag('10955.jpg') %>
+      <%= image_tag(@background) %>
     </div>
     <div class="content">
       <div class="description">
