--- a/app/views/medals/show.html.erb
+++ b/app/views/medals/show.html.erb
@@ -33,6 +33,7 @@
           <%= @medal.description %>
         </div>
       </div>
+      <%= link_to 'بازگشت',_back_url ,:class => 'ui button'%>
     </div>
   </div>
 </div>
