--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -65,6 +65,7 @@
           </div>
         </div>
       </div>
+      <%= link_to 'بازگشت',_back_url ,:class => 'ui button'%>
     </div>
   </div>
 </div>
