--- a/app/views/medals/_medal_card.html.erb
+++ b/app/views/medals/_medal_card.html.erb
@@ -26,7 +26,9 @@
 
   <div class="ui content">
     <div class="ui header">
-      <%= 'مدال'+' '+medal.per_type_name + ' '+ medal.display_name %>
+      <%= link_to medal do%>
+          <%= 'مدال'+' '+medal.per_type_name + ' '+ medal.display_name %>
+      <% end %>
     </div>
   </div>
   <div class="content">
