--- a/app/views/medals/_medal_card_add_medal.html.erb
+++ b/app/views/medals/_medal_card_add_medal.html.erb
@@ -7,10 +7,6 @@
         <div class="ui center">
           <% if admin_signed_in? %>
               <div class="ui vertical labeled icon buttons" >
-                <%= link_to  edit_medal_path(medal),:class => "ui  button" do%>
-                    <i class="edit icon"></i>
-                    ویرایش
-                <% end %>
                 <% if student.medalizations.where(:student_id => student.id , :medal_id => medal.id).blank? %>
                     <%= link_to add_medal_path(:id => student.id, :m_id => medal.id),:method =>'POST' ,:class => "ui green button" do %>
                         <i class="checkmark icon"></i>
@@ -21,10 +17,6 @@
                         <i class="remove icon"></i>
                         پس گرفتن
                     <% end %>
-                <% end %>
-                <%= link_to  medal, method: :delete, data: { confirm: 'Are you sure?' } ,:class => "ui red button" do%>
-                    <i class="trash icon"></i>
-                    حذف
                 <% end %>
               </div>
           <% end %>
@@ -37,7 +29,9 @@
 
   <div class="ui content " id="disable-content">
     <div class="ui header">
-      <%= 'مدال'+' '+medal.per_type_name + ' '+ medal.display_name %>
+      <%= link_to medal do%>
+          <%= 'مدال'+' '+medal.per_type_name + ' '+ medal.display_name %>
+      <% end %>
     </div>
   </div>
   <div class="content" id="disable-content">
@@ -51,10 +45,12 @@
       ...بیشتر
   <% end %>
 </div>
-<script type="text/javascript">
-    $(document).ready(function() {
-        $('.special.card .image').dimmer({
-            on: 'hover'
+<% if admin_signed_in? %>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.special.card .image').dimmer({
+                on: 'hover'
+            });
         });
-    });
-</script>
+    </script>
+<% end %>
