--- a/app/views/medals/show.html.erb
+++ b/app/views/medals/show.html.erb
@@ -1,9 +1,8 @@
-<div class="ui sixteen wide mobile twelve wide tablet twelve wide computer column ">
-  <div class="ui stackable centered grid">
-    <div class="ui six wide computer  sixteen wide mobile twelve wide tablet  column">
+  <div class="ui stackable centered grid" style="min-width:100%;">
+    <div class="ui four wide computer  sixteen wide mobile twelve wide tablet  column">
       <div class=" ui card "  style="text-align: center;margin: 0 auto">
         <div class="ui content ">
-          <%= image_tag @medal.image ,:class => 'centered rounded'%>
+          <%= image_tag @medal.image ,:class => 'centered rounded ui image'%>
         </div>
         <div class="ui content">
           <div class="ui header">
@@ -22,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="ui ten wide computer sixteen wide mobile twelve wide tablet  column">
+    <div class="ui eight wide computer sixteen wide mobile twelve wide tablet  column">
       <div class="ui segments">
         <div class="ui segment">
           <div class="ui header">
@@ -36,4 +35,3 @@
       <%= link_to 'بازگشت',_back_url ,:class => 'ui button'%>
     </div>
   </div>
-</div>
