--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,7 +1,6 @@
-<div class="ui sixteen wide mobile twelve wide tablet twelve wide computer column ">
   <div class="ui stackable centered grid">
 
-    <div class="ui six wide computer  sixteen wide mobile twelve wide tablet  column">
+    <div class="ui four wide computer  sixteen wide mobile twelve wide tablet  column">
       <div class=" ui  card" style="margin: 0 auto">
         <div class="ui image ">
           <%= image_tag @student.avatar %>
@@ -34,7 +33,7 @@
       </div>
     </div>
 
-    <div class="ui ten wide computer  sixteen wide mobile twelve wide tablet column">
+    <div class="ui eight wide computer  sixteen wide mobile twelve wide tablet column">
       <div class="ui segments">
         <div class="ui segment">
           <div class="ui header">
@@ -68,5 +67,5 @@
       <%= link_to 'بازگشت',_back_url ,:class => 'ui button'%>
     </div>
   </div>
-</div>
+
 
