--- a/app/views/medals/_medal_card_add_medal.html.erb
+++ b/app/views/medals/_medal_card_add_medal.html.erb
@@ -19,10 +19,9 @@
                 <% end %>
               </div>
           <% end %>
- 
       </div>
     </div>
-    <%= image_tag medal.image %>
+    <%= image_tag medal.image ,:class => "ui image " %>
   </div>
 
 
