--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,4 +1,4 @@
-  <div class="ui stackable centered grid">
+  <div class="ui stackable centered grid" style="min-width: 100%;">
     <div class="ui four wide computer  sixteen wide mobile twelve wide tablet  column">
       <div class=" ui  card" style="margin: 0 auto">
         <div class="ui image ">
