--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,70 +1,70 @@
-  <div class="ui stackable centered grid" style="min-width: 100%;">
-    <div class="ui four wide computer  sixteen wide mobile twelve wide tablet  column">
-      <div class=" ui  card" style="margin: 0 auto">
-        <div class="ui image ">
-          <%= image_tag @student.avatar %>
+<div class="ui stackable centered grid" style="min-width: 100%;">
+  <div class="ui four wide computer  sixteen wide mobile twelve wide tablet  column">
+    <div class=" ui  card" style="margin: 0 auto">
+      <div class="ui image ">
+        <%= image_tag @student.avatar %>
+      </div>
+      <div class="ui content">
+        <div class="ui header">
+          <%= @student.first_name + ' '+@student.last_name %>
         </div>
-        <div class="ui content">
-          <div class="ui header">
-            <%= @student.first_name + ' '+@student.last_name %>
-          </div>
+      </div>
+      <div class="content">
+        <div class="ui meta">
+          <%= 'کلاس: ' + @student.class_name%>
         </div>
-        <div class="content">
-          <div class="ui meta">
-            <%= 'کلاس: ' + @student.class_name%>
-          </div>
-          <div class="ui meta">
-            <%= 'شماره لیست: ' + @student.class_number.to_s%>
-          </div>
-          <div class="ui meta">
-            <%= 'تعداد مدال ها:' + ' '+@student.medals.count.to_s%>
-          </div>
+        <div class="ui meta">
+          <%= 'شماره لیست: ' + @student.class_number.to_s%>
         </div>
-        <div class="ui extra content">
+        <div class="ui meta">
+          <%= 'تعداد مدال ها:' + ' '+@student.medals.count.to_s%>
+        </div>
+      </div>
+      <div class="ui extra content">
       <span class="ui  floated">
         <%= 'امتیاز: ' + @student.score.to_s  %>
       </span>
-        </div>
-        <%= link_to student_projects_path(@student),:class => "ui green labeled icon bottom attached button" do%>
-            <i class="tasks icon"></i>
-            پروژه ها
-        <% end %>
       </div>
-    </div>
-
-    <div class="ui eight wide computer  sixteen wide mobile twelve wide tablet column">
-      <div class="ui segments">
-        <div class="ui segment">
-          <div class="ui header">
-            مدال ها
-          </div>
-        </div>
-        <div class="ui green secondary segment">
-          <div class="ui horizontal divider ">
-            لیست مدال هایی که شما کسب کرده اید
-          </div>
-          <% if @medals.count == 0 %>
-              <div class="ui message warning">
-                متاسفانه شما هیچ مدالی ندارید
-              </div>
-          <% end %>
-          <div class="ui three link cards">
-            <% @medals.each do |medal| %>
-                <%= render 'medals/medal_card_add_medal' , :medal => medal ,:student =>@student%>
-            <% end %>
-          </div>
-          <div class="ui horizontal divider ">
-            مدال هایی که باید کسب کنید
-          </div>
-          <div class="ui three link cards disable">
-            <% @not_mine_medals.each do |medal| %>
-                <%= render 'medals/medal_card_add_medal' , :medal => medal ,:student =>@student%>
-            <% end %>
-          </div>
-        </div>
-      </div>
-      <%= link_to 'بازگشت',_back_url ,:class => 'ui button'%>
+      <%= link_to student_projects_path(@student),:class => "ui green labeled icon bottom attached button" do%>
+          <i class="tasks icon"></i>
+          پروژه ها
+      <% end %>
     </div>
   </div>
+
+  <div class="ui eight wide computer  sixteen wide mobile twelve wide tablet column">
+    <div class="ui segments">
+      <div class="ui segment">
+        <div class="ui header">
+          مدال ها
+        </div>
+      </div>
+      <div class="ui green secondary segment">
+        <div class="ui horizontal divider ">
+          لیست مدال هایی که شما کسب کرده اید
+        </div>
+        <% if @medals.count == 0 %>
+            <div class="ui message warning">
+              متاسفانه شما هیچ مدالی ندارید
+            </div>
+        <% end %>
+        <div class="ui three link cards">
+          <% @medals.each do |medal| %>
+              <%= render 'medals/medal_card' , :medal => medal ,:student =>@student%>
+          <% end %>
+        </div>
+        <div class="ui horizontal divider ">
+          مدال هایی که باید کسب کنید
+        </div>
+        <div class="ui three link cards disable">
+          <% @not_mine_medals.each do |medal| %>
+              <%= render 'medals/medal_card' , :medal => medal ,:student =>@student%>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <%= link_to 'بازگشت',_back_url ,:class => 'ui button'%>
+</div>
 
 
