--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,7 +45,12 @@ body{
     width: 30px;
     height: auto;
 }
-
+.bar{
+    padding-right: 10px;
+    padding-top: 3px;
+    color:#fff;
+    max-width: 100%;
+}
 /*.disable  {*/
     /*opacity: 0.4;*/
     /*filter: alpha(opacity=40); /!* msie *!/*/
