--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="ui sixteen wide mobile twelve wide tablet twelve wide computer column ">
+<div class="ui sixteen wide mobile twelve wide tablet eight wide computer column ">
   <div class="ui green segment">
     <%= render 'form' %>
   </div>
