--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,12 +11,10 @@
     </div>
     <div class="content">
       <div class="description">
-        کلاس شهرسازی سوم بسیار فلان است که خیلی بهمان بود ما فلانترش کردیم اما باید بیشتر فلان شود که چرا نشده تا حالا فقط بهمان میداند.
-        کلاس شهرسازی سوم بسیار فلان است که خیلی بهمان بود ما فلانترش کردیم اما باید بیشتر فلان شود که چرا نشده تا حالا فقط بهمان میداند.
-        کلاس شهرسازی سوم بسیار فلان است که خیلی بهمان بود ما فلانترش کردیم اما باید بیشتر فلان شود که چرا نشده تا حالا فقط بهمان میداند.
-        کلاس شهرسازی سوم بسیار فلان است که خیلی بهمان بود ما فلانترش کردیم اما باید بیشتر فلان شود که چرا نشده تا حالا فقط بهمان میداند.
-        کلاس شهرسازی سوم بسیار فلان است که خیلی بهمان بود ما فلانترش کردیم اما باید بیشتر فلان شود که چرا نشده تا حالا فقط بهمان میداند.
-      </div>
+در كلاس شهر¬سازي به دنبال ياد گرفتن مفاهيم شهرسازي و شبيه¬سازي شهر¬ها هستيم. در اين كلاس ياد مي¬گيريم شهر¬ها چگونه به وجود آمدند و شهر¬هاي بزرگ و منظّم چگونه طرّاحي مي شوند. سعي مي¬كنيم شهري با مشخّصات مناسب بسازيم. براي اين كارها از  نرم افزارهاي شبيه¬سازي شهر استفاده مي كنيم و ياد مي¬گيريم چگونه به آن¬ها كار كنيم. در نهايت مي¬توانيم شهرهاي مناسب و منظّم ساخته و آن¬ها را  مديريت كنيم.
+ در اين صفحه مشخّصات شهرهايي كه ساخته¬ايم و همچنين مدال هايي كه كسب كرده ايم آورده شده است. اين صفحه توانايي¬ها و ميزان پيشرفت ما را در زمينه شهر¬سازي و مديريت شهر نشان مي¬دهد.
+
+       </div> 
     </div>
     <div class="extra content">
       <span class=" floated">
@@ -29,6 +27,7 @@
   <!--<a class="launch icon item">-->
   <!--<i class="content icon"></i>-->
   <!--</a>-->
+  <% unless (@studentsA.first == nil or @studentsA.first.score == 0) and (@studentsB.first == nil or @studentsB.first.score == 0)%>
   <div class="ui segments">
     <div class="ui  segment">
       <div class="ui header">
@@ -37,11 +36,20 @@
     </div>
     <div class="ui green secondary segment">
       <div class="ui three link cards">
-        <% @students.each do |student| %>
-            <%= render 'students/student_card', :student => student %>
+        <div class="ui horizontal divider ">
+          کلاس الف
+        </div>
+        <% @studentsA.each do |student| %>
+        <%= render 'students/student_card', :student => student %>
         <% end %>
-
+        <div class="ui horizontal divider ">
+          کلاس ب
+        </div>
+        <% @studentsB.each do |student| %>
+        <%= render 'students/student_card', :student => student %>
+        <% end %>
       </div>
     </div>
   </div>
+  <% end %>
 </div>
