--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -44,6 +44,7 @@
       پروژه ها
       <% end %>
     </div>
+<% if @latest_medals.count !=0 %>
     <div class=" ui  card" style="margin: 20px  auto">
       <div class="ui green  label top attached" style="text-align:center;">
         اخرین مدال های کسب شده
@@ -60,6 +61,7 @@
       </div>
 
     </div>
+<% end %>
   </div>
 
   <div class="ui eight wide computer  sixteen wide mobile twelve wide tablet column">
