--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,9 +10,9 @@
       <%= image_tag(@background) %>
     </div>
     <div class="content">
-      <div class="description">
-در كلاس شهر¬سازي به دنبال ياد گرفتن مفاهيم شهرسازي و شبيه¬سازي شهر¬ها هستيم. در اين كلاس ياد مي¬گيريم شهر¬ها چگونه به وجود آمدند و شهر¬هاي بزرگ و منظّم چگونه طرّاحي مي شوند. سعي مي¬كنيم شهري با مشخّصات مناسب بسازيم. براي اين كارها از  نرم افزارهاي شبيه¬سازي شهر استفاده مي كنيم و ياد مي¬گيريم چگونه به آن¬ها كار كنيم. در نهايت مي¬توانيم شهرهاي مناسب و منظّم ساخته و آن¬ها را  مديريت كنيم.
- در اين صفحه مشخّصات شهرهايي كه ساخته¬ايم و همچنين مدال هايي كه كسب كرده ايم آورده شده است. اين صفحه توانايي¬ها و ميزان پيشرفت ما را در زمينه شهر¬سازي و مديريت شهر نشان مي¬دهد.
+      <div class="description" style="direction:rtl;">
+در كلاس شهر سازي به دنبال ياد گرفتن مفاهيم شهرسازي و شبيه سازي شهر ها هستيم. در اين كلاس ياد مي گيريم شهر ها چگونه به وجود آمدند و شهر هاي بزرگ و منظّم چگونه طرّاحي مي شوند. سعي مي كنيم شهري با مشخّصات مناسب بسازيم. براي اين كارها از  نرم افزارهاي شبيه سازي شهر استفاده مي كنيم و ياد مي گيريم چگونه به آن ها كار كنيم. در نهايت مي توانيم شهرهاي مناسب و منظّم ساخته و آن ها را  مديريت كنيم.
+ در اين صفحه مشخّصات شهرهايي كه ساخته ايم و همچنين مدال هايي كه كسب كرده ايم آورده شده است. اين صفحه توانايي ها و ميزان پيشرفت ما را در زمينه شهر سازي و مديريت شهر نشان مي دهد.
 
        </div> 
     </div>
