--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -5,10 +5,10 @@
       <div style="width:<%=@student.score/10  %>%" class="bar"></div>
     </div>
       <div class="ui image ">
-        <% if @student.avatar.filename == nil %>
-        <%= image_tag ('user_placeholder.png') %>
-        <%else%>
+        <% if @student.avatar? %>
         <%= image_tag @student.avatar %>
+        <%else%>
+        <%= image_tag ('user_placeholder.png') %>
         <% end %>
       </div>
       <div class="ui content">
