model post added and some changes to progress bars

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,10 @@
           <i class="plus icon"></i>
           افزودن مدال
       <% end %>
+      <%= link_to new_post_path ,:class => 'item' do %>
+          <i class="newspaper icon"></i>
+          پست جدید
+      <% end %>
       <%= link_to upload_path ,:class => 'item' do %>
           <i class="upload icon"></i>
           بروز رسانی
