--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,9 +1,6 @@
 <div class="ui stackable centered grid" style="min-width: 100%;">
   <div class="ui four wide computer  sixteen wide mobile twelve wide tablet  column">
     <div class=" ui  card" style="margin: 0 auto">
-    <div class="ui top green attached progress">
-      <div style="width:<%=@student.score/10  %>%" class="bar"></div>
-    </div>
       <div class="ui image ">
         <% if @student.avatar? %>
         <%= image_tag @student.avatar %>
@@ -28,7 +25,7 @@
         </div>
       </div>
       <div class="ui extra content">
-        <div  class="ui green progress">
+        <div  class="ui <%=csscolor(@student)%> progress">
           <div style="width:<%=@student.score/10  %>%" class="bar">
             <%=@student.score.to_s  %>
           </div>
@@ -106,6 +103,4 @@
   $(document).ready(function(){
     $('#pr').progress();
   });
-  
-<<<<<<< HEAD
 </script>
