--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,6 +51,10 @@ body{
     color:#fff;
     max-width: 100%;
 }
+.rtl{
+    direction: rtl;
+    text-align: right;
+}
 /*.disable  {*/
     /*opacity: 0.4;*/
     /*filter: alpha(opacity=40); /!* msie *!/*/
