--- a/app/views/students/_student_card.html.erb
+++ b/app/views/students/_student_card.html.erb
@@ -1,6 +1,6 @@
 <div class=" ui link special card">
-<div class="ui top green attached progress">
-  <div style="width:<%=student.score/10  %>%" class="bar"></div>
+<div class="ui top <%=csscolor(student)%> attached progress active">
+  <div style="width:<%=student.score/10 %>%;" class="bar"></div>
 </div>
   <div class="blurring dimmable image">
     <div class="ui dimmer">
