--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,10 +11,10 @@
     </div>
     <div class="content">
       <div class="description" style="direction:rtl;">
-در كلاس شهر سازي به دنبال ياد گرفتن مفاهيم شهرسازي و شبيه سازي شهر ها هستيم. در اين كلاس ياد مي گيريم شهر ها چگونه به وجود آمدند و شهر هاي بزرگ و منظّم چگونه طرّاحي مي شوند. سعي مي كنيم شهري با مشخّصات مناسب بسازيم. براي اين كارها از  نرم افزارهاي شبيه سازي شهر استفاده مي كنيم و ياد مي گيريم چگونه به آن ها كار كنيم. در نهايت مي توانيم شهرهاي مناسب و منظّم ساخته و آن ها را  مديريت كنيم.
- در اين صفحه مشخّصات شهرهايي كه ساخته ايم و همچنين مدال هايي كه كسب كرده ايم آورده شده است. اين صفحه توانايي ها و ميزان پيشرفت ما را در زمينه شهر سازي و مديريت شهر نشان مي دهد.
+        در كلاس شهر سازي به دنبال ياد گرفتن مفاهيم شهرسازي و شبيه سازي شهر ها هستيم. در اين كلاس ياد مي گيريم شهر ها چگونه به وجود آمدند و شهر هاي بزرگ و منظّم چگونه طرّاحي مي شوند. سعي مي كنيم شهري با مشخّصات مناسب بسازيم. براي اين كارها از  نرم افزارهاي شبيه سازي شهر استفاده مي كنيم و ياد مي گيريم چگونه به آن ها كار كنيم. در نهايت مي توانيم شهرهاي مناسب و منظّم ساخته و آن ها را  مديريت كنيم.
+        در اين صفحه مشخّصات شهرهايي كه ساخته ايم و همچنين مدال هايي كه كسب كرده ايم آورده شده است. اين صفحه توانايي ها و ميزان پيشرفت ما را در زمينه شهر سازي و مديريت شهر نشان مي دهد.
 
-       </div> 
+      </div>
     </div>
     <div class="extra content">
       <span class=" floated">
@@ -23,33 +23,58 @@
     </div>
   </div>
 
+  <% @posts.each do |post| %>
+      <div class=" ui green card fluid">
+        <div class="content">
+          <div class="header">
+            <%= post.title %>
+          </div>
+        </div>
+        <% if post.image? %>
+            <div class="image">
+              <%= image_tag post.image %>
+            </div>
+        <% end %>
+        <div class="content">
+          <div class="description" style="direction:rtl;">
+            <%= post.content%>
+          </div>
+        </div>
+        <div class="extra content">
+      <span class=" floated">
+            <%= post.created_at.to_jalali.strftime("%A %d %B %Y") %>
+      </span>
+        </div>
+      </div>
+  <% end %>
+
 
   <!--<a class="launch icon item">-->
   <!--<i class="content icon"></i>-->
   <!--</a>-->
   <% unless (@studentsA.first == nil or @studentsA.first.score == 0) and (@studentsB.first == nil or @studentsB.first.score == 0)%>
-  <div class="ui segments">
-    <div class="ui  segment">
-      <div class="ui header">
-        برترین ها
-      </div>
-    </div>
-    <div class="ui green secondary segment">
-      <div class="ui three link cards">
-        <div class="ui horizontal divider ">
-          کلاس الف
+      <div class="ui segments">
+        <div class="ui  segment">
+          <div class="ui header">
+            برترین ها
+          </div>
         </div>
-        <% @studentsA.each do |student| %>
-        <%= render 'students/student_card', :student => student %>
-        <% end %>
-        <div class="ui horizontal divider ">
-          کلاس ب
+        <div class="ui green secondary segment">
+          <div class="ui three link cards">
+            <div class="ui horizontal divider ">
+              کلاس الف
+            </div>
+            <% @studentsA.each do |student| %>
+                <%= render 'students/student_card', :student => student %>
+            <% end %>
+            <div class="ui horizontal divider ">
+              کلاس ب
+            </div>
+            <% @studentsB.each do |student| %>
+                <%= render 'students/student_card', :student => student %>
+            <% end %>
+          </div>
         </div>
-        <% @studentsB.each do |student| %>
-        <%= render 'students/student_card', :student => student %>
-        <% end %>
       </div>
-    </div>
-  </div>
   <% end %>
 </div>
