--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <i class="plus icon"></i>
           افزودن مدال
       <% end %>
-      <%= link_to new_post_path ,:class => 'item' do %>
+      <%= link_to posts_path ,:class => 'item' do %>
           <i class="newspaper icon"></i>
           پست جدید
       <% end %>
