--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,10 @@
       <i class="users  icon"></i>
       دانش آموزان
   <% end %>
+  <%= link_to tutorials_path ,:class => 'item' do %>
+      <i class="video play  icon"></i>
+      فیلم های آموزشی
+  <% end %>
   <!--<%= link_to '#',:class => 'item' do %>-->
       <!--<i class="travel icon"></i>-->
       <!--معلمین-->
